platform/argocd/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: homelab
      namespace: traefik
  hostnames:
    - argocd.biplane.v6.rocks
    - argocd.biplane.casa
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
          filters:
            - type: ExtensionRef
              extensionRef:
                group: traefik.io
                kind: Middleware
                name: secure-headers
